# resources/ts/lib/models/user.ts
@@ -1,7 +1,14 @@
-import { Discord } from './auth';
+export type Discord = {
+  id: string;
+}
+
+export type Channel = {
+  twitch: Array<string>;
+}
 
 export type User = {
   id: number;
   username: string;
   discord: Discord;
+  channels: Channel;
 }
